--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!--верхняя линия-->
     <header class="header">
       <nav class="header-navigation">
-        <a href="./index.html" class="logo link"><span class="logo">Web<span class="logo-header">Studio</span></a>
+        <a href="./index.html" class="logo link"><span class="logo">Web</span><span class="logo-header">Studio</span></a>
       
         <ul class="header-list list">
           <li class="header-item">
@@ -114,7 +114,7 @@
     </main>
     <!--подвал-->
     <footer class="footer">
-      <a href="./index.html" class="logo link"><span class="logo">Web<span class="logo-footer">Studio</span></a
+      <a href="./index.html" class="logo link"><span class="logo">Web</span><span class="logo-footer">Studio</span></a
       >
       <address>
         <ul class="address list">
