--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Домашнее задание 2</title>
+    <title>Домашнее задание 3</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
@@ -14,121 +18,181 @@
   <body>
     <!--верхняя линия-->
     <header class="header">
-      <nav class="header-navigation">
-        <a href="./index.html" class="logo link">Web<span class="logo-header">Studio</span></a>
-      
-        <ul class="header-list list">
-          <li class="header-item">
-            <a class="header-link link current" href="./index.html" >Студия</a>
+      <div class="container nav">
+        <a href="./index.html" class="logo-link link"
+          ><span class="logo">Web</span
+          ><span class="logo-header">Studio</span></a
+        >
+        <nav class="header-navigation">
+          <ul class="header-list list">
+            <li class="header-item">
+              <a class="header-link link current" href="./index.html">Студия</a>
+            </li>
+            <li class="header-item">
+              <a class="header-link link" href="./portfolio.html">Портфолио</a>
+            </li>
+            <li class="header-item">
+              <a class="header-link link" href="">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="contacs list">
+          <li class="contakts-item-mail">
+            <a href="mailto:info@devstudio.com" class="contakts-item-link link"
+              >info@devstudio.com</a
+            >
           </li>
-          <li class="header-item">
-            <a class="header-link link" href="./portfolio.html" >Портфолио</a>
-          </li>
-          <li class="header-item">
-            <a class="header-link link" href="" >Контакты</a>
+          <li class="contakts-item-tel">
+            <a href="tel:+380961111111" class="contakts-item-link link"
+              >+380961111111</a
+            >
           </li>
         </ul>
-      </nav>
-      <ul class="contacs list">
-        <li class="contakts-item"><a href="mailto:info@devstudio.com" class="contakts-item link">info@devstudio.com</a></li>
-        <li class="contakts-item"><a href="tel:+380961111111" class="contakts-item link">+380961111111</a></li>
-      </ul>
+      </div>
     </header>
     <main>
       <!--Герой-->
       <section class="hero">
-        <h1 class="hero-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
-        <button class="hero-title-button" type="button" >Заказать услугу</button>
+        <div class="container"></div>
+        <h1 class="hero-title">
+          ЭФФЕКТИВНЫЕ РЕШЕНИЯ <br />
+          ДЛЯ ВАШЕГО БИЗНЕСА
+        </h1>
+        <button class="hero-title-button" type="button">Заказать услугу</button>
       </section>
       <!--особенности-->
       <section class="section">
-        <h2 hidden>Особенности</h2>
-        <ul class="features list">
-          <li class="feutures-item">
-            <h3 class="feutures-title">Внимание к деталям</h3>
-            <p class="feutures-text">
-              Идейные соображения, а также начало повседневной работы по формированию позиции.
-            </p>
-          </li>
+        <div class="container">
+          <h2 hidden>Особенности</h2>
+          <ul class="features list">
+            <li class="feutures-item">
+              <h3 class="feutures-title">Внимание к деталям</h3>
+              <p class="feutures-text">
+                Идейные соображения, а также начало повседневной работы по
+                формированию позиции.
+              </p>
+            </li>
 
-          <li class="feutures-item">
-            <h3 class="feutures-title">Пунктуальность</h3>
-            <p class="feutures-text">
-              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-            </p>
-          </li>
+            <li class="feutures-item">
+              <h3 class="feutures-title">Пунктуальность</h3>
+              <p class="feutures-text">
+                Задача организации, в особенности же рамки и место обучения
+                кадров влечет за собой.
+              </p>
+            </li>
 
-          <li class="feutures-item">
-            <h3 class="feutures-title">Планирование</h3>
-            <p class="feutures-text">
-              Равным образом консультация с широким активом в значительной степени обуславливает.
-            </p>
-          </li>
-          <li class="feutures-item">
-            <h3 class="feutures-title">Современные технологии</h3>
-            <p class="feutures-text">
-              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-            </p>
-          </li>
-        </ul>
+            <li class="feutures-item">
+              <h3 class="feutures-title">Планирование</h3>
+              <p class="feutures-text">
+                Равным образом консультация с широким активом в значительной
+                степени обуславливает.
+              </p>
+            </li>
+            <li class="feutures-item">
+              <h3 class="feutures-title">Современные технологии</h3>
+              <p class="feutures-text">
+                Значимость этих проблем настолько очевидна, что реализация
+                плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!--чем занимаемся-->
-      <section class="section">
-        <h2 class="heading">Чем мы занимаемся</h2>
-        <ul class="work list">
-          <li class="work-item">
-            <img src="./images/box1.jpg" alt="програмист работает за столом в офисе" width="370" />
-          </li>
-          <li class="work-item">
-            <img src="./images/box2.jpg" alt="разработка мобильных приложений" width="370" /></li>
-          <li class="work-item">
-            <img src="./images/box3.jpg" alt="веб дизайнер подбирает цвет на графическом планшете" width="370"/></li>
-        </ul>
+      <section class="work">
+        <div class="container">
+          <h2 class="heading">Чем мы занимаемся</h2>
+          <ul class="work-list list">
+            <li class="work-item">
+              <img
+                src="./images/box1.jpg"
+                alt="програмист работает за столом в офисе"
+                width="370"
+              />
+            </li>
+            <li class="work-item">
+              <img
+                src="./images/box2.jpg"
+                alt="разработка мобильных приложений"
+                width="370"
+              />
+            </li>
+            <li class="work-item">
+              <img
+                src="./images/box3.jpg"
+                alt="веб дизайнер подбирает цвет на графическом планшете"
+                width="370"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <!--наша команда-->
       <section class="section-team">
-        <h2 class="heading">Наша команда</h2>
-        <ul class="team-list list">
-          <li class="team-item">
-            <img src="./images/img.jpg" alt="employee photo" width="270" />
-            <h3 class="team-title">Игорь Демьяненко</h3>
-            <p class="team-text">Product Designer</p>
-          </li>
-          <li class="team-item">
-            <img src="./images/img2.jpg" alt="employee photo" width="270" />
-            <h3 class="team-title">Ольга Репина</h3>
-            <p class="team-text">Frontend Developer</p>
-          </li>
-          <li class="team-item">
-            <img src="./images/img3.jpg" alt="employee photo" width="270" />
-            <h3 class="team-title">Николай Тарасов</h3>
-            <p class="team-text">Marketing</p>
-          </li>
-          <li class="team-item">
-            <img src="./images/img4.jpg" alt="employee photo" width="270" />
-            <h3 class="team-title">Михаил Ермаков</h3>
-            <p class="team-text">UI Designer</p>
-          </li>
-        </ul>
+        <h2 class="heading-team">Наша команда</h2>
+        <div class="container">
+          <ul class="team-list list">
+            <li class="team-item-img">
+              <img src="./images/img.jpg" alt="employee photo" width="270" />
+              <!-- <div class="tiam-section"> -->
+              <h3 class="team-title">Игорь Демьяненко</h3>
+              <p class="team-text">Product Designer</p>
+              <!-- </div> -->
+            </li>
+            <li class="team-item-img">
+              <img src="./images/img2.jpg" alt="employee photo" width="270" />
+              <div class="tiam-section">
+                <h3 class="team-title">Ольга Репина</h3>
+                <p class="team-text">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="team-item-img">
+              <img src="./images/img3.jpg" alt="employee photo" width="270" />
+              <div class="tiam-section">
+                <h3 class="team-title">Николай Тарасов</h3>
+                <p class="team-text">Marketing</p>
+              </div>
+            </li>
+            <li class="team-item-img">
+              <img src="./images/img4.jpg" alt="employee photo" width="270" />
+              <div class="tiam-section">
+                <h3 class="team-title">Михаил Ермаков</h3>
+                <p class="team-text">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!--подвал-->
     <footer class="footer">
-      <a href="./index.html" class="logo link">Web<span class="logo-footer">Studio</span></a
-      >
-      <address>
-        <ul class="address list">
-          <li class="address-item">
-            <a
-              href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!4m13!1m7!3m6!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!2z0LHRg9C7LiDQm9C10YHQuCDQo9C60YDQsNC40L3QutC4LCAyNiwg0JrQuNC10LIsIDAyMDAw!3b1!8m2!3d50.4265807!4d30.5383858!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
-              class="address-link link"
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
-          <li class="address-item"><a href="mailto:info@devstudio.com" class="address-footer link">info@devstudio.com</a></li>
-          <li class="address-item"><a href="tel:+380961111111" class="address-footer link">+380961111111</a></li>
-        </ul>
-      </address>
+      <div class="container">
+        <a href="./index.html" class="logo-link link"
+          ><span class="logo">Web</span
+          ><span class="logo-footer">Studio</span></a
+        >
+        <address>
+          <ul class="address list">
+            <li class="address-item">
+              <a
+                href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!4m13!1m7!3m6!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!2z0LHRg9C7LiDQm9C10YHQuCDQo9C60YDQsNC40L3QutC4LCAyNiwg0JrQuNC10LIsIDAyMDAw!3b1!8m2!3d50.4265807!4d30.5383858!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
+                class="address-link link"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li class="address-item">
+              <a href="mailto:info@devstudio.com" class="address-footer link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="address-item">
+              <a href="tel:+380961111111" class="address-footer link"
+                >+380961111111</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
