--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>домашнего задания #2.</title>
+    <title>домашнего задания 3.</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
@@ -15,8 +19,11 @@
     <!--верхняя линия-->
     <header class="header">
       <nav class="header-navigation">
-        <a href="./index.html" class="logo link">Web<span class="logo-header">Studio</span></a>
-    
+        <a href="./index.html" class="logo link"
+          ><span class="logo">Web</span
+          ><span class="logo-header">Studio</span></a
+        >
+
         <ul class="header-list list">
           <li class="header-item">
             <a class="header-link link current" href="./index.html">Студия</a>
@@ -30,28 +37,52 @@
         </ul>
       </nav>
       <ul class="contacs list">
-        <li class="contakts-item"><a href="mailto:info@devstudio.com" class="contakts-item link">info@devstudio.com</a></li>
-        <li class="contakts-item"><a href="tel:+380961111111" class="contakts-item link">+380961111111</a></li>
+        <li class="contakts-item">
+          <a href="mailto:info@devstudio.com" class="contakts-item link"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li class="contakts-item">
+          <a href="tel:+380961111111" class="contakts-item link"
+            >+380961111111</a
+          >
+        </li>
       </ul>
     </header>
     <main>
       <!--фильтр-->
-    <section class="section">
-      <h1 hidden>набор фильтров</h1>
+      <section class="section">
+        <h1 hidden>набор фильтров</h1>
 
-      <ul class="filter list">
-        <li class="filter-item"><button type="button" class="filter-button">Все</button></li>
-        <li class="filter-item"><button type="button" class="filter-button">Веб-сайты</button></li>
-        <li class="filter-item"><button type="button" class="filter-button">Приложения</button></li>
-        <li class="filter-item"><button type="button" class="filter-button">Дизайн</button></li>
-        <li class="filter-item"><button type="button" class="filter-button">Маркетинг</button></li>
-      </ul>
+        <ul class="filter list">
+          <li class="filter-item">
+            <button type="button" class="filter-button">Все</button>
+          </li>
+          <li class="filter-item">
+            <button type="button" class="filter-button">Веб-сайты</button>
+          </li>
+          <li class="filter-item">
+            <button type="button" class="filter-button">Приложения</button>
+          </li>
+          <li class="filter-item">
+            <button type="button" class="filter-button">Дизайн</button>
+          </li>
+          <li class="filter-item">
+            <button type="button" class="filter-button">Маркетинг</button>
+          </li>
+        </ul>
 
-      <!--проэкты-->
-      
+        <!--проэкты-->
+
         <ul class="project list">
           <li class="project-item">
-            <a href="" class="project-link link"><img src="./images/img-web.jpg" alt="Технокряк" width="370" height="294" />
+            <a href="" class="project-link link"
+              ><img
+                src="./images/img-web.jpg"
+                alt="Технокряк"
+                width="370"
+                height="294"
+              />
               <h2 class="project-title">Технокряк</h2>
               <p class="project-text">Веб-сайт</p></a
             >
@@ -83,14 +114,24 @@
 
           <li class="project-item">
             <a href="" class="project-link link"
-              ><img src="./images/img-prime.jpg" alt="Проект Prime" width="370" height="294" />
+              ><img
+                src="./images/img-prime.jpg"
+                alt="Проект Prime"
+                width="370"
+                height="294"
+              />
               <h2 class="project-title">Проект Prime</h2>
               <p class="project-text">Маркетинг</p></a
             >
           </li>
           <li class="project-item">
             <a href="" class="project-link link"
-              ><img src="./images/img-boxes.jpg" alt="Проект Boxes" width="370" height="294" />
+              ><img
+                src="./images/img-boxes.jpg"
+                alt="Проект Boxes"
+                width="370"
+                height="294"
+              />
               <h2 class="project-title">Проект Boxes</h2>
               <p class="project-text">Приложение</p></a
             >
@@ -122,7 +163,12 @@
           </li>
           <li class="project-item">
             <a href="" class="project-link link"
-              ><img src="./images/img-lab.jpg" alt="Проект LAB" width="370" height="294" />
+              ><img
+                src="./images/img-lab.jpg"
+                alt="Проект LAB"
+                width="370"
+                height="294"
+              />
               <h2 class="project-title">Проект LAB</h2>
               <p class="project-text">Маркетинг</p></a
             >
@@ -140,20 +186,32 @@
             >
           </li>
         </ul>
-    </section>
+      </section>
     </main>
     <!--подвал-->
     <footer class="footer">
-      <a href="./index.html" class="logo link">Web<span class="logo-footer">Studio</span></a>
+      <a href="./index.html" class="logo link"
+        ><span class="logo">Web</span><span class="logo-footer">Studio</span></a
+      >
       <address>
         <ul class="address list">
           <li class="address-item">
-            <a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!4m13!1m7!3m6!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!2z0LHRg9C7LiDQm9C10YHQuCDQo9C60YDQsNC40L3QutC4LCAyNiwg0JrQuNC10LIsIDAyMDAw!3b1!8m2!3d50.4265807!4d30.5383858!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
-              class="address-link link">г. Киев, пр-т Леси Украинки, 26</a>
+            <a
+              href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!4m13!1m7!3m6!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!2z0LHRg9C7LiDQm9C10YHQuCDQo9C60YDQsNC40L3QutC4LCAyNiwg0JrQuNC10LIsIDAyMDAw!3b1!8m2!3d50.4265807!4d30.5383858!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
+              class="address-link link"
+              >г. Киев, пр-т Леси Украинки, 26</a
+            >
           </li>
-          <li class="address-item"><a href="mailto:info@devstudio.com" class="address-footer link">info@devstudio.com</a>
+          <li class="address-item">
+            <a href="mailto:info@devstudio.com" class="address-footer link"
+              >info@devstudio.com</a
+            >
           </li>
-          <li class="address-item"><a href="tel:+380961111111" class="address-footer link">+380961111111</a></li>
+          <li class="address-item">
+            <a href="tel:+380961111111" class="address-footer link"
+              >+380961111111</a
+            >
+          </li>
         </ul>
       </address>
     </footer>
