--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     <!--подвал-->
     <footer class="footer">
       <div class="container">
-        <a href="./index.html" class="logo-link link"
+        <a href="./index.html" class="logo-link-footer link"
           ><span class="logo">Web</span
           ><span class="logo-footer">Studio</span></a
         >
