как бы закончил
как бы закончил

--- a/index.html
+++ b/index.html
@@ -134,10 +134,10 @@
           <ul class="team-list list">
             <li class="team-item-img">
               <img src="./images/img.jpg" alt="employee photo" width="270" />
-              <!-- <div class="tiam-section"> -->
-              <h3 class="team-title">Игорь Демьяненко</h3>
-              <p class="team-text">Product Designer</p>
-              <!-- </div> -->
+              <div class="tiam-section">
+                <h3 class="team-title">Игорь Демьяненко</h3>
+                <p class="team-text">Product Designer</p>
+              </div>
             </li>
             <li class="team-item-img">
               <img src="./images/img2.jpg" alt="employee photo" width="270" />
@@ -166,7 +166,7 @@
     </main>
     <!--подвал-->
     <footer class="footer">
-      <div class="container">
+      <div class="container foot">
         <a href="./index.html" class="logo-link-footer link"
           ><span class="logo">Web</span
           ><span class="logo-footer">Studio</span></a
