--- a/portfolio.html
+++ b/portfolio.html
@@ -18,42 +18,43 @@
   <body>
     <!--верхняя линия-->
     <header class="header">
-      <nav class="header-navigation">
-        <a href="./index.html" class="logo link"
+      <div class="container nav">
+        <a href="./index.html" class="logo-link link"
           ><span class="logo">Web</span
           ><span class="logo-header">Studio</span></a
         >
-
-        <ul class="header-list list">
-          <li class="header-item">
-            <a class="header-link link current" href="./index.html">Студия</a>
+        <nav class="header-navigation">
+          <ul class="header-list list">
+            <li class="header-item">
+              <a class="header-link link current" href="./index.html">Студия</a>
+            </li>
+            <li class="header-item">
+              <a class="header-link link" href="./portfolio.html">Портфолио</a>
+            </li>
+            <li class="header-item">
+              <a class="header-link link" href="">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="contacs list">
+          <li class="contakts-item-mail">
+            <a href="mailto:info@devstudio.com" class="contakts-item-link link"
+              >info@devstudio.com</a
+            >
           </li>
-          <li class="header-item">
-            <a class="header-link link" href="./portfolio.html">Портфолио</a>
-          </li>
-          <li class="header-item">
-            <a class="header-link link" href="">Контакты</a>
+          <li class="contakts-item-tel">
+            <a href="tel:+380961111111" class="contakts-item-link link"
+              >+380961111111</a
+            >
           </li>
         </ul>
-      </nav>
-      <ul class="contacs list">
-        <li class="contakts-item">
-          <a href="mailto:info@devstudio.com" class="contakts-item link"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li class="contakts-item">
-          <a href="tel:+380961111111" class="contakts-item link"
-            >+380961111111</a
-          >
-        </li>
-      </ul>
+      </div>
     </header>
-    <main>
-      <!--фильтр-->
-      <section class="section">
-        <h1 hidden>набор фильтров</h1>
+    <!--фильтр-->
+    <section class="section-portfolio">
+      <h1 hidden>набор фильтров</h1>
 
+      <div class="container filter">
         <ul class="filter list">
           <li class="filter-item">
             <button type="button" class="filter-button">Все</button>
@@ -71,9 +72,10 @@
             <button type="button" class="filter-button">Маркетинг</button>
           </li>
         </ul>
+      </div>
 
-        <!--проэкты-->
-
+      <!--проэкты-->
+      <div class="container">
         <ul class="project list">
           <li class="project-item">
             <a href="" class="project-link link"
@@ -83,9 +85,11 @@
                 width="370"
                 height="294"
               />
-              <h2 class="project-title">Технокряк</h2>
-              <p class="project-text">Веб-сайт</p></a
-            >
+              <div class="porjekt-section">
+                <h2 class="project-title">Технокряк</h2>
+                <p class="project-text">Веб-сайт</p>
+              </div>
+            </a>
           </li>
           <li class="project-item">
             <a href="" class="project-link link"
@@ -95,9 +99,11 @@
                 width="370"
                 height="294"
               />
-              <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
-              <p class="project-text">Дизайн</p></a
-            >
+              <div class="porjekt-section">
+                <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
+                <p class="project-text">Дизайн</p>
+              </div>
+            </a>
           </li>
           <li class="project-item">
             <a href="" class="project-link link"
@@ -107,9 +113,11 @@
                 width="370"
                 height="294"
               />
-              <h2 class="project-title">Ресторан Seafood</h2>
-              <p class="project-text">Приложение</p></a
-            >
+              <div class="porjekt-section">
+                <h2 class="project-title">Ресторан Seafood</h2>
+                <p class="project-text">Приложение</p>
+              </div>
+            </a>
           </li>
 
           <li class="project-item">
@@ -120,9 +128,11 @@
                 width="370"
                 height="294"
               />
-              <h2 class="project-title">Проект Prime</h2>
-              <p class="project-text">Маркетинг</p></a
-            >
+              <div class="porjekt-section">
+                <h2 class="project-title">Проект Prime</h2>
+                <p class="project-text">Маркетинг</p>
+              </div>
+            </a>
           </li>
           <li class="project-item">
             <a href="" class="project-link link"
@@ -132,9 +142,11 @@
                 width="370"
                 height="294"
               />
-              <h2 class="project-title">Проект Boxes</h2>
-              <p class="project-text">Приложение</p></a
-            >
+              <div class="porjekt-section">
+                <h2 class="project-title">Проект Boxes</h2>
+                <p class="project-text">Приложение</p>
+              </div>
+            </a>
           </li>
           <li class="project-item">
             <a href="" class="project-link link"
@@ -144,9 +156,11 @@
                 width="370"
                 height="294"
               />
-              <h2 class="project-title">Inspiration has Borders</h2>
-              <p class="project-text">Веб-сайт</p></a
-            >
+              <div class="porjekt-section">
+                <h2 class="project-title">Inspiration has Borders</h2>
+                <p class="project-text">Веб-сайт</p>
+              </div>
+            </a>
           </li>
 
           <li class="project-item">
@@ -157,9 +171,11 @@
                 width="370"
                 height="294"
               />
-              <h2 class="project-title">Издание Limited Edition</h2>
-              <p class="project-text">Дизайн</p></a
-            >
+              <div class="projekt-section">
+                <h2 class="project-title">Издание Limited Edition</h2>
+                <p class="project-text">Дизайн</p>
+              </div>
+            </a>
           </li>
           <li class="project-item">
             <a href="" class="project-link link"
@@ -169,9 +185,11 @@
                 width="370"
                 height="294"
               />
-              <h2 class="project-title">Проект LAB</h2>
-              <p class="project-text">Маркетинг</p></a
-            >
+              <div class="projekt-section">
+                <h2 class="project-title">Проект LAB</h2>
+                <p class="project-text">Маркетинг</p>
+              </div>
+            </a>
           </li>
           <li class="project-item">
             <a href="" class="project-link link"
@@ -181,39 +199,44 @@
                 width="370"
                 height="294"
               />
-              <h2 class="project-title">Growing business</h2>
-              <p class="project-text">Приложение</p></a
-            >
+              <div class="project-section">
+                <h2 class="project-title">Growing business</h2>
+                <p class="project-text">Приложение</p>
+              </div>
+            </a>
           </li>
         </ul>
-      </section>
-    </main>
+      </div>
+    </section>
     <!--подвал-->
     <footer class="footer">
-      <a href="./index.html" class="logo link"
-        ><span class="logo">Web</span><span class="logo-footer">Studio</span></a
-      >
-      <address>
-        <ul class="address list">
-          <li class="address-item">
-            <a
-              href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!4m13!1m7!3m6!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!2z0LHRg9C7LiDQm9C10YHQuCDQo9C60YDQsNC40L3QutC4LCAyNiwg0JrQuNC10LIsIDAyMDAw!3b1!8m2!3d50.4265807!4d30.5383858!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
-              class="address-link link"
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
-          <li class="address-item">
-            <a href="mailto:info@devstudio.com" class="address-footer link"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="address-item">
-            <a href="tel:+380961111111" class="address-footer link"
-              >+380961111111</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container foot">
+        <a href="./index.html" class="logo-link-footer link"
+          ><span class="logo">Web</span
+          ><span class="logo-footer">Studio</span></a
+        >
+        <address>
+          <ul class="address list">
+            <li class="address-item">
+              <a
+                href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!4m13!1m7!3m6!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!2z0LHRg9C7LiDQm9C10YHQuCDQo9C60YDQsNC40L3QutC4LCAyNiwg0JrQuNC10LIsIDAyMDAw!3b1!8m2!3d50.4265807!4d30.5383858!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
+                class="address-link link"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li class="address-item">
+              <a href="mailto:info@devstudio.com" class="address-footer link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="address-item">
+              <a href="tel:+380961111111" class="address-footer link"
+                >+380961111111</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
