--- a/portfolio.html
+++ b/portfolio.html
@@ -171,7 +171,7 @@
                 width="370"
                 height="294"
               />
-              <div class="projekt-section">
+              <div class="porjekt-section">
                 <h2 class="project-title">Издание Limited Edition</h2>
                 <p class="project-text">Дизайн</p>
               </div>
@@ -185,7 +185,7 @@
                 width="370"
                 height="294"
               />
-              <div class="projekt-section">
+              <div class="porjekt-section">
                 <h2 class="project-title">Проект LAB</h2>
                 <p class="project-text">Маркетинг</p>
               </div>
@@ -199,7 +199,7 @@
                 width="370"
                 height="294"
               />
-              <div class="project-section">
+              <div class="porjekt-section">
                 <h2 class="project-title">Growing business</h2>
                 <p class="project-text">Приложение</p>
               </div>
