--- a/index.html
+++ b/index.html
@@ -53,17 +53,18 @@
     <main>
       <!--Герой-->
       <section class="hero">
-        <div class="container"></div>
-        <h1 class="hero-title">
-          ЭФФЕКТИВНЫЕ РЕШЕНИЯ <br />
-          ДЛЯ ВАШЕГО БИЗНЕСА
-        </h1>
-        <button class="hero-title-button" type="button">Заказать услугу</button>
+        <div class="container">
+          <h1 class="hero-title">
+            ЭФФЕКТИВНЫЕ РЕШЕНИЯ <br />
+            ДЛЯ ВАШЕГО БИЗНЕСА
+          </h1>
+          <button class="hero-title-button" type="button">Заказать услугу</button>
+        </div>
       </section>
       <!--особенности-->
       <section class="section">
         <div class="container">
-          <h2 hidden>Особенности</h2>
+          <h2 class="visually-hidden">Особенности</h2>
           <ul class="features list">
             <li class="feutures-item">
               <h3 class="feutures-title">Внимание к деталям</h3>
@@ -99,7 +100,7 @@
         </div>
       </section>
       <!--чем занимаемся-->
-      <section class="work">
+      <section class="section work">
         <div class="container">
           <h2 class="heading">Чем мы занимаемся</h2>
           <ul class="work-list list">
@@ -128,10 +129,11 @@
         </div>
       </section>
       <!--наша команда-->
-      <section class="section-team">
-        <h2 class="heading-team">Наша команда</h2>
+      <section class="section section-team">
+        
         <div class="container">
-          <ul class="team-list list">
+          <h2 class="heading-team">Наша команда</h2>
+          <ul class="team-list">
             <li class="team-item-img">
               <img src="./images/img.jpg" alt="employee photo" width="270" />
               <div class="tiam-section">
@@ -167,28 +169,19 @@
     <!--подвал-->
     <footer class="footer">
       <div class="container foot">
-        <a href="./index.html" class="logo-link-footer link"
-          ><span class="logo">Web</span
-          ><span class="logo-footer">Studio</span></a
-        >
+        <a href="./index.html" class="logo-link-footer link"><span class="logo">Web</span><span
+            class="logo-footer">Studio</span></a>
         <address>
           <ul class="address list">
             <li class="address-item">
-              <a
-                href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!4m13!1m7!3m6!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!2z0LHRg9C7LiDQm9C10YHQuCDQo9C60YDQsNC40L3QutC4LCAyNiwg0JrQuNC10LIsIDAyMDAw!3b1!8m2!3d50.4265807!4d30.5383858!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
-                class="address-link link"
-                >г. Киев, пр-т Леси Украинки, 26</a
-              >
+              <a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!4m13!1m7!3m6!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!2z0LHRg9C7LiDQm9C10YHQuCDQo9C60YDQsNC40L3QutC4LCAyNiwg0JrQuNC10LIsIDAyMDAw!3b1!8m2!3d50.4265807!4d30.5383858!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
+                class="address-link link">г. Киев, пр-т Леси Украинки, 26</a>
             </li>
             <li class="address-item">
-              <a href="mailto:info@devstudio.com" class="address-footer link"
-                >info@devstudio.com</a
-              >
+              <a href="mailto:info@devstudio.com" class="address-footer link">info@devstudio.com</a>
             </li>
             <li class="address-item">
-              <a href="tel:+380961111111" class="address-footer link"
-                >+380961111111</a
-              >
+              <a href="tel:+380961111111" class="address-footer link">+380961111111</a>
             </li>
           </ul>
         </address>
